# MAI-OS-labs

./: README.md
lab_1/: README.md
lab_1/src/: child  child.cpp  parent  parent.cpp  test.txt
lab_2/: .gitignore  CMakeLists.txt  README.md  generate_charts.py  performance_test.sh
lab_2/.cache/clangd/index/: filters.c.3D57B73D3032EF3C.idx  filters.h.203BAE263DCC18E3.idx  main.c.3C80D93F5E423F9A.idx  matrix_utils.c.A0C86E9E64209071.idx  matrix_utils.h.52C83A138E958CEA.idx  thread_utils.c.B097B4361A91EE06.idx  thread_utils.h.EE843509BC5F8296.idx
lab_2/include/: filters.h  matrix_utils.h  thread_utils.h
lab_2/src/: filters.c  main.c  matrix_utils.c  thread_utils.c
lab_3/: README.md  SharedData.hpp  child  child.cpp  full_trace.txt  output.txt  parent  parent.cpp
